--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,66 +1,133 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 body{
     background-image: url(../images/Fondo.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 1300px;
+    background: #316c19;
 }
 .container{
-    display: block;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 header{
     text-transform: uppercase;
-    justify-items: center;
-    display: grid;
-    margin-top: 39px;
+    margin-top: 10vh;
+    width: 65vh;
+    box-sizing: border-box;
+    color: #fff;
 }
 header > h5{
     padding-top: 20px;
+    font-size: 20px;
+    font-weight: normal;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 form{
-    width: 40%;
-    height: 50vh;
-    background: #ffffff7a;
-    margin-left: 30%;
-    margin-top: 5%; 
-    padding-bottom: 10px;
+    width: 70vh;
+    height: 70vh;
+    background-color: #ffffff7a;
+    margin-top: 10vh;
+    padding-top: 80px;
 }
 form > .form{
     display: flex;
     flex-direction: column;
-    width: 80%;
+    align-items: center;
+    /* width: 80%;   */
     height: 10px;
-    margin-top: 0px;
-    padding-left: 10px;
-    margin-left: 8.5%;
+    /* margin-top: 0px; */
+    /* padding-left: 10px;*/
+    /* margin-left: 8.5%; */
     padding-top: 40px;
+    box-sizing: border-box;
 }
 form > p{
     text-transform: uppercase;
-    margin-left: 45%;
+    margin-left: 30px;
     padding-top: 10%;
-    font-family: sans-serif;
-    font-weight: bold;
-    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight:initial;
+    font-size: 23px;
 }
 form > .form > input{
     padding-bottom: 10px;
     padding-top: 10px;
-    margin-bottom: 20px;
-    border: solid 1.5px #000;
+    margin-bottom: 15px;
+    border: solid 2px #000000c9;
+    border-radius: 10px;
     background: transparent;
+    width: 90%;
+    color: #000;
+    font-size: 15px;
+    
 }
 form > .form > .submit{
     border-radius: 12px;
     width: 80%;
-    margin-left: 11%;
+    margin-left: 0;
     transition: all .3s ease-in-out;
+    margin-top: 40px;
 }
 form > .form > .submit:hover{
-    transition: all 3s easi-in-out;
-    background: #ffffff61;
+    background: #ffffffa0;
+}
+@media(width < 700px){
+    body{
+        background: #123403;
+    }
+    .container{
+        width: 650px;
+        height: 844;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: auto;
+    }
+    header{
+        margin-top: 20%;
+        text-align: center;
+        width: 80vh;
+        margin-bottom: 50px;
+    }
+    header > h1{
+        font-size: 52px;
+        padding-bottom: 50px;
+        color: white;
+    }
+    header > h5{
+        font-size: 25px;
+        color: white;
+    }
+    form{
+        width: 95%;
+        background-color: #ffff36da;
+    }
+    form > p{
+        font-size: 50px;
+        margin-left: 37%;
+        margin-bottom: 10px;
+        padding-top: 5%;
+    }
+    form > .form{
+        height: 100%;
+        align-items: center;
+        padding-top: 10px;
+    }
+    form > .form > input{
+        width: 85%;
+        height: 80px;
+        border: solid 5px #000000c9;
+        border-radius: 30px;
+        margin: 15px 0;
+        font-size: 30px;
+    }
+    form > .form > .submit{
+        margin-left: 0;
+        width: 30%;
+        margin: 10% 0;
+    }
 }
